--- a/FE/styles/rechargebalance.scss
+++ b/FE/styles/rechargebalance.scss
@@ -94,49 +94,60 @@ header {
         justify-content: center;
         border-radius: 20px;
         border: 4px solid $primary-color1;
-      
-        .flex{
-            display: flex;
-            flex-direction: row;
-            .rbox{
-                padding-right: 115px;
-    
-                h4{
-                    font-size: 30px;
-                    color: $primary-color1;
-                    margin-bottom: 55px;
-                }
-            }
-            .lbox{
-                padding-top: 15px;
-                
-                input{
-                    width: 536px;
-                    height: 57px;
-                    border-radius: 7px;
-                    border: 1px solid #d8d8d8;
-                    font-size: 30px;
-                    margin-bottom: 30px;
-                }
-            }
+
+        .balance{
+          display: flex;
+          flex-direction: row;
+
+          h2{
+            margin-right: 30px;
+          }
+          
         }
-        // div{
-        //   display: flex;
-        //   flex-direction: column;
-        //   align-items: center;
-        //   justify-content: center;
-        // }
-        
-      }
-      button {
-        color: #ffffff;
-        background-color: $primary-color2;
-        border-radius: 34px;
-        padding: 15px 20px;
-        border: none;
-        font-size: 30px;
-        font-weight: bold;
-      }
+      
+        form{
+                padding: 30px;
+                display: flex;
+                width: 100%;
+                flex-direction: column;
+                align-items: center;
+                justify-content: center;
+                // border-radius: 20px;
+                // border: 4px solid $primary-color1;
+                .line{
+                    display: flex;
+                    width: 1000px;
+                    justify-content:space-between;
+                    padding-bottom: 30px;
+                    label{
+                        color: $primary-color1;
+                        font-size: 30px;
+                        font-weight: bold;
+                    }
+                    input[type="text"],input[type="password"],input[type="email"],input[type="date"], input[type="number"]{
+                        border: 2px solid $primary-color2;
+                        width: 614px;
+                        height:66px;
+                        border-radius: 14px;
+                        font-size: 30px;
+                        font-family: sans-serif;
+                        padding: 10px;
+                        box-sizing: border-box;
+                    }
+                }
+                
+              }
+              button {
+                color: #ffffff;
+                background-color: $primary-color2;
+                border-radius: 34px;
+                padding: 15px 20px;
+                border: none;
+                font-size: 20px;
+                font-weight: bold;
+                cursor: pointer;
+              }
+            }    
       
     }
     
