--- a/FE/styles/bookTicket.scss
+++ b/FE/styles/bookTicket.scss
@@ -160,8 +160,13 @@ header {
           border-radius: 14px;
           margin: 0px 30px;
           font-size: 25px;
+          color: $primary-color1;
           &:focus {
             outline: 2px solid $primary-color2;
+          }
+          &::placeholder {
+            color: $primary-color1;
+            text-align: center;
           }
         }
         /* The container <div> - needed to position the dropdown content */
@@ -171,20 +176,22 @@ header {
           .dropdown-content {
             display: none;
             position: absolute;
-            top: 60px;
+            top: 72px;
             left: 35px;
             background-color: #f6f6f6;
             min-width: 230px;
             border: 1px solid $primary-color2;
-            z-index: 1;
             p {
-              color: black;
-              font-size: 20px;
-              padding: 12px 16px;
+              color: $primary-color2;
+              font-size: 25px;
+              padding: 8px 16px;
+              margin: 0px;
               display: block;
               cursor: pointer;
+              transition: all 0.3s;
               &:hover {
                 background-color: $primary-color2;
+                color: white;
               }
             }
           }
@@ -196,6 +203,7 @@ header {
       }
 
       .getTrip {
+        margin-top: 20px;
         font-size: 20px;
         .dropdown-content {
           display: none;
