--- a/FE/styles/firstpage.css
+++ b/FE/styles/firstpage.css
@@ -6,11 +6,77 @@
 body {
   background-color: #d8d8d8;
   font-family: sans-serif;
-  background-image: url("../image/firstpage.png");
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
   background-repeat: no-repeat;
+}
+
+.slideshow-container {
+  width: 100%;
+  position: relative;
+  z-index: -1;
+}
+
+.slideshow-container .mySlides {
+  display: none;
+}
+
+.slideshow-container img {
+  vertical-align: middle;
+}
+
+.slideshow-container .prev, .slideshow-container .next {
+  cursor: pointer;
+  position: absolute;
+  top: 50%;
+  width: auto;
+  padding: 16px;
+  margin-top: -22px;
+  color: white;
+  font-weight: bold;
+  font-size: 18px;
+  -webkit-transition: 0.6s ease;
+  transition: 0.6s ease;
+  border-radius: 0 3px 3px 0;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+      -ms-user-select: none;
+          user-select: none;
+}
+
+.slideshow-container .next {
+  right: 0;
+  border-radius: 3px 0 0 3px;
+}
+
+.slideshow-container .prev:hover, .slideshow-container .next:hover {
+  color: gray;
+}
+
+.slideshow-container .fade {
+  -webkit-animation-name: fade;
+          animation-name: fade;
+  -webkit-animation-duration: 1.5s;
+          animation-duration: 1.5s;
+}
+
+@-webkit-keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes fade {
+  from {
+    opacity: .4;
+  }
+  to {
+    opacity: 1;
+  }
 }
 
 header {
@@ -24,6 +90,7 @@ header {
       -ms-flex-align: center;
           align-items: center;
   background-position: 1% 1%;
+  margin-top: -950px;
 }
 
 header .hleft {
@@ -78,6 +145,12 @@ header .hright .lg {
       -ms-flex-align: center;
           align-items: center;
   margin-top: -35px;
+}
+
+.container .head .icon {
+  width: 15px;
+  height: 24px;
+  margin-top: 50px;
 }
 
 .container .head h3 {
@@ -198,7 +271,8 @@ header .hright .lg {
   top: 7px;
 }
 
-.container .content .box .flex .select-items div, .container .content .box .flex .select-selected {
+.container .content .box .flex .select-items div,
+.container .content .box .flex .select-selected {
   color: #ba131a;
   padding: 8px 16px;
   border: 1px solid transparent;
@@ -218,7 +292,8 @@ header .hright .lg {
   display: none;
 }
 
-.container .content .box .flex .select-items div:hover, .container .content .box .flex .same-as-selected {
+.container .content .box .flex .select-items div:hover,
+.container .content .box .flex .same-as-selected {
   background-color: #ba131a;
   color: #fff;
 }
@@ -274,7 +349,7 @@ header .hright .lg {
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
-  margin-top: -38px;
+  margin-top: -18px;
   margin-left: 1300px;
 }
 
@@ -294,7 +369,9 @@ header .hright .lg {
   width: 29px;
   height: 17px;
   margin-left: 20px;
-  margin-top: 29px;
+  margin-top: 20px;
+  padding: 10px;
+  margin-bottom: 30px;
 }
 
 .other {
@@ -305,7 +382,7 @@ header .hright .lg {
   -webkit-box-direction: normal;
       -ms-flex-direction: row;
           flex-direction: row;
-  margin-top: 25px;
+  margin-top: 50px;
 }
 
 .other .lother a {
