--- a/FE/styles/firstpage.scss
+++ b/FE/styles/firstpage.scss
@@ -6,16 +6,64 @@
 body {
   background-color: #d8d8d8;
   font-family: sans-serif;
-  background-image: url("../image/firstpage.png");
+  // background-image: url("../image/firstpage.png");
   align-items: center;
   background-repeat: no-repeat;
 }
+
+
+.slideshow-container{
+  width: 100%;
+  position: relative;
+  z-index: -1;
+
+  .mySlides{
+    display: none;
+  }
+  img {vertical-align: middle;}
+
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  .prev:hover, .next:hover {
+    color: gray;
+  }
+  .fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+  }
+  
+  @keyframes fade {
+    from {opacity: .4} 
+    to {opacity: 1}
+  }
+  
+  
+}
+
 header {
+  
   display: flex;
   justify-content: space-between;
   align-items: center;
   background-position: 1% 1%;
-  
+  margin-top: -950px;
+
   .hleft {
     margin: 25px 50px;
     img {
@@ -41,8 +89,8 @@ header {
 }
 
 .container {
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
   .head {
     display: flex;
     flex-direction: row;
@@ -50,7 +98,12 @@ header {
     align-items: center;
     margin-top: -35px;
 
-    
+    .icon {
+      width: 15px;
+      height: 24px;
+      margin-top: 50px;
+    }
+
     // margin-bottom: -23px;
     h3 {
       background-color: $primary-color1;
@@ -90,156 +143,131 @@ header {
       padding: 20px 0px;
       font-size: 50px;
     }
-    h2{
+    h2 {
       color: $primary-color1;
       font-size: 40px;
       margin-top: 35px;
     }
 
-      .box{
-        width: 1710px;
-        height: 260px;
+    .box {
+      width: 1710px;
+      height: 260px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+      border-radius: 20px;
+
+      .flex {
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: center;
-        border-radius: 20px;
-        
+        flex-direction: row;
+        margin: 70px;
 
-      
-        .flex{
-            display: flex;
-            flex-direction: row;
-            margin: 70px;
-
-            .custom-select{
-              position: relative;
-              color: $primary-color2;
-              font-size: 24px;
-              text-transform: uppercase;
-              font-weight: bold;
-
-            }
-
-            .custom-select select{
-              display: none;
-            }
-
-            .select-selected{
-              background-color: #ffffff;
-            }
-
-            .select-selected:after {
-              position: absolute;
-              content: "";
-              top: 14px;
-              right: 10px;
-              width: 0;
-              height: 0;
-              border: 6px solid transparent;
-              border-color: $primary-color2 transparent transparent transparent;
-              margin-top: 50px;
-              margin-right: 20px;
-            }
-
-            .select-selected.select-arrow-active:after {
-              border-color: transparent transparent $primary-color2 transparent;
-              top: 7px;
-            }
-
-            .select-items div,.select-selected {
-              color: $primary-color2;
-              padding: 8px 16px;
-              border: 1px solid transparent;
-              // margin-left: -17px;
-              cursor: pointer;
-            }
-
-            .select-items {
-              position: absolute;
-              background-color: #ffffff;
-              top: 100%;
-              left: 0;
-              right: 0;
-              z-index: 99;
-            }
-            
-            .select-hide {
-              display: none;
-            }
-            
-            .select-items div:hover, .same-as-selected {
-              background-color: $primary-color2;
-              color: #fff;
-            }
-            .rbox{
-                padding-right: 35px;
-                padding-left: 35px;
-                margin-right: 60px;
-                width: 730px;
-                height: 117px;
-                border-radius: 16px;
-                border: solid 1px #d8d8d8;
-                
-                h4{
-                    font-size: 13px;
-                    color: $primary-color1;
-                    
-                }
-                   
-              
-            }
-            .lbox{
-                // padding-top: 15px;
-                padding-right: 35px;
-                padding-left: 35px;
-                width: 730px;
-                height: 117px;
-                border-radius: 16px;
-                border: solid 1px #d8d8d8;
-                // input{
-                //     width: 536px;
-                //     height: 57px;
-                //     border-radius: 7px;
-                //     border: 1px solid #d8d8d8;
-                //     font-size: 30px;
-                //     margin-bottom: 30px;
-                // }
-                h4{
-                  font-size: 13px;
-                  color: $primary-color1;
-                  
-              }
-            }
-            
+        .custom-select {
+          position: relative;
+          color: $primary-color2;
+          font-size: 24px;
+          text-transform: uppercase;
+          font-weight: bold;
         }
-        
-        // div{
-        //   display: flex;
-        //   flex-direction: column;
-        //   align-items: center;
-        //   justify-content: center;
-        // }
-      
-        
-      }
 
-      button {
-        color: #ffffff;
-        background-color: $primary-color2;
-        border-radius: 34px;
-        padding: 15px 20px;
-        border: none;
-        font-size: 30px;
-        font-weight: bold;
+        .custom-select select {
+          display: none;
+        }
+
+        .select-selected {
+          background-color: #ffffff;
+        }
+
+        .select-selected:after {
+          position: absolute;
+          content: "";
+          top: 14px;
+          right: 10px;
+          width: 0;
+          height: 0;
+          border: 6px solid transparent;
+          border-color: $primary-color2 transparent transparent transparent;
+          margin-top: 50px;
+          margin-right: 20px;
+        }
+
+        .select-selected.select-arrow-active:after {
+          border-color: transparent transparent $primary-color2 transparent;
+          top: 7px;
+        }
+
+        .select-items div,
+        .select-selected {
+          color: $primary-color2;
+          padding: 8px 16px;
+          border: 1px solid transparent;
+          // margin-left: -17px;
+          cursor: pointer;
+        }
+
+        .select-items {
+          position: absolute;
+          background-color: #ffffff;
+          top: 100%;
+          left: 0;
+          right: 0;
+          z-index: 99;
+        }
+
+        .select-hide {
+          display: none;
+        }
+
+        .select-items div:hover,
+        .same-as-selected {
+          background-color: $primary-color2;
+          color: #fff;
+        }
+        .rbox {
+          padding-right: 35px;
+          padding-left: 35px;
+          margin-right: 60px;
+          width: 730px;
+          height: 117px;
+          border-radius: 16px;
+          border: solid 1px #d8d8d8;
+
+          h4 {
+            font-size: 13px;
+            color: $primary-color1;
+          }
+        }
+        .lbox {
+          // padding-top: 15px;
+          padding-right: 35px;
+          padding-left: 35px;
+          width: 730px;
+          height: 117px;
+          border-radius: 16px;
+          border: solid 1px #d8d8d8;
+          
+          h4 {
+            font-size: 13px;
+            color: $primary-color1;
+          }
+        }
       }
-      
-    
-    
+    }
+
+    button {
+      color: #ffffff;
+      background-color: $primary-color2;
+      border-radius: 34px;
+      padding: 15px 20px;
+      border: none;
+      font-size: 30px;
+      font-weight: bold;
+    }
   }
 }
 
-.search{
+.search {
   width: 308px;
   height: 76px;
   border-radius: 13px;
@@ -247,10 +275,10 @@ header {
   display: flex;
   text-align: center;
   justify-content: center;
-  margin-top: -38px;
+  margin-top: -18px;
   margin-left: 1300px;
 
-  a{
+  a {
     font-size: 21px;
     font-weight: bold;
     color: #fff;
@@ -260,27 +288,28 @@ header {
     margin-top: 25px;
   }
 
-  .icon{
+  .icon {
     width: 29px;
     height: 17px;
     margin-left: 20px;
-    margin-top: 29px;
+    margin-top: 20px;
+    padding:10px;
+    margin-bottom: 30px;
   }
+}
 
-}  
-
-.other{
+.other {
   display: flex;
   flex-direction: row;
-  margin-top: 25px;
+  margin-top: 50px;
 
-  .lother{
-    a{
+  .lother {
+    a {
       font-size: 23px;
       color: $primary-color1;
       margin-left: 20px;
     }
-    .sort{
+    .sort {
       width: 16px;
       height: 16px;
       margin-top: 7px;
@@ -288,8 +317,8 @@ header {
     }
   }
 
-  .rother{
-    a{
+  .rother {
+    a {
       font-size: 23px;
       color: $primary-color1;
       margin-right: 20px;
@@ -297,8 +326,4 @@ header {
       text-decoration: underline;
     }
   }
-
-  
-
 }
-
